--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -4,7 +4,7 @@
   padding: 2.5rem;
   text-align: center;
   border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+  box-shadow: 0 1.5rem 4rem $color-shadow-light;
   transition: transform 0.2s;
 
   &__icon {
