--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -12,9 +12,10 @@ $color-tertiary-dark: #5643fa;
 $color-gray-light-1: #f7f7f7;
 $color-gray-light-2: #eee;
 $color-shadow-light: rgba(#000, 0.15);
-$color-shadow-dark: rgba(#000, 0.15);
+$color-shadow-dark: rgba(#000, 0.2);
 
 $color-gray-dark: #777;
+$color-gray-dark-2: #999;
 $color-white: #fff;
 $color-black: #000;
 
@@ -25,3 +26,6 @@ $default-font-size: 1.6rem;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+// BORDER RADIUS
+$border-radius-default: 3px;
