--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -15,7 +15,7 @@
     left: 0;
     width: 100%;
     backface-visibility: hidden;
-    border-radius: 3px;
+    border-radius: $border-radius-default;
     overflow: hidden;
     box-shadow: 0 1.5rem 4rem $color-shadow-light;
 
