--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -3,7 +3,7 @@
   font-size: 1.5rem;
   padding: 2.5rem;
   text-align: center;
-  border-radius: 3px;
+  border-radius: $border-radius-default;
   box-shadow: 0 1.5rem 4rem $color-shadow-light;
   transition: transform 0.2s;
 
