--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -16,6 +16,7 @@ $color-shadow-dark: rgba(#000, 0.2);
 
 $color-gray-dark: #777;
 $color-gray-dark-2: #999;
+$color-gray-dark-3: #333;
 $color-white: #fff;
 $color-black: #000;
 
