--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+/*
+0-600px Phone
+600-900px Tablet portrait
+900-1200px Tablet landscape
+1200-1800px Normal styles apply
+1800px + Big desktop
+
+Breakpoint argument choices
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -35,6 +48,12 @@
 
 html {
   font-size: 62.5%; }
+  @media (min-width: 112.5) {
+    html {
+      font-size: 75%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
 
 body {
   box-sizing: border-box; }
