--- a/sass/abstract/_mixins.scss
+++ b/sass/abstract/_mixins.scss
@@ -12,3 +12,47 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+//MEDIA QUERY MANAGER
+/*
+0-600px Phone
+600-900px Tablet portrait
+900-1200px Tablet landscape
+1200-1800px Normal styles apply
+1800px + Big desktop
+
+Breakpoint argument choices
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      // 600px
+      @content;
+    }
+  }
+
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      // 900 px
+      @content;
+    }
+  }
+
+  @if $breakpoint == tab-landscape {
+    @media (max-width: 75em) {
+      // 1200 px
+      @content;
+    }
+  }
+
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5) {
+      // 1800 px
+      @content;
+    }
+  }
+}
