--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,8 +7,22 @@
 }
 
 html {
-  // Defines 1rem measurement
+  // Defines 1rem measurement, 1 rem = 10px, 10px/16px = 62.5%
   font-size: 62.5%;
+
+  @include respond(big-desktop) {
+    font-size: 75%; // 1 rem = 12, 12/16
+  }
+
+  @include respond(tab-land) {
+    // width < 900
+    font-size: 56.25%; // 1 rem = 9px, 9/16
+  }
+
+  @include respond(tab-port) {
+    // width < 900
+    font-size: 50%; // 1 rem = 8px, 8/16 = 50%
+  }
 }
 
 body {
