--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -28,6 +28,7 @@ $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
+$gutter-horizontal-small: 1rem;
 
 // BORDER RADIUS
 $border-radius-default: 3px;
