--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -4,6 +4,10 @@
 
 .u-margin-bottom-small {
   margin-bottom: 1.5rem !important;
+
+  @include respond(tab-port) {
+    margin-bottom: 1rem !important;
+  }
 }
 
 .u-margin-bottom-medium {
