--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -7,8 +7,16 @@
   box-shadow: 0 1.5rem 4rem $color-shadow-light;
   transition: transform 0.2s;
 
-  @include respond(tab-port) {
+  @include respond(tab-land) {
     padding: 2rem;
+
+    &:first-of-type {
+      margin-left: 1rem;
+    }
+
+    &:last-of-type {
+      margin-right: 1rem;
+    }
   }
 
   &__icon {
