--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -22,12 +22,20 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.25);
     transition: all 0.4s 0.5s;
+
+    @include respond(tab-land) {
+      width: 90%;
+    }
   }
 
   &__left {
     width: 33.333333%;
     display: table-cell;
     vertical-align: middle;
+
+    @include respond(tab-port) {
+      width: 0;
+    }
   }
 
   &__right {
@@ -40,6 +48,10 @@
   &__img {
     display: block;
     width: 100%;
+
+    @include respond(tab-port) {
+      display: none;
+    }
   }
 
   &__text {
@@ -63,6 +75,14 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto; //none, manual, or
+
+    @include respond(tab-port) {
+      -webkit-column-count: 1;
+      -moz-column-count: 1;
+      column-count: 1;
+
+      margin-bottom: 2rem;
+    }
   }
 
   &:target {
