--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -50,6 +50,14 @@
 
   .col-1-of-4 {
     width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+
+    @include respond(tab-land) {
+      width: calc((100% - 3 * #{$gutter-horizontal-small}) / 4);
+
+      &:not(:last-child) {
+        margin-right: $gutter-horizontal-small;
+      }
+    }
   }
 
   .col-2-of-4 {
