--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -66,12 +66,38 @@
     ),
     url(../img/nat-10.jpg);
   background-size: 100%;
-  height: 50rem;
   border-radius: $border-radius-default;
   box-shadow: 0 1.5rem 4rem $color-shadow-dark;
+
+  @include respond(tab-land) {
+    background-image: linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 65%,
+        transparent 65%
+      ),
+      url(../img/nat-10.jpg);
+    background-size: cover;
+  }
+
+  @include respond(tab-port) {
+    background-image: linear-gradient(
+      to right,
+      rgba($color-white, 0.9) 0%,
+      rgba($color-white, 0.9) 100%
+    );
+  }
 
   &__form {
     width: 50%;
     padding: 6rem;
+
+    @include respond(tab-land) {
+      width: 65%;
+    }
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 }
