--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -49,16 +49,20 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: linear-gradient(
-    to right,
-    $color-primary-light,
-    $color-primary-dark
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
+  color: $color-primary;
   letter-spacing: 2px;
   transition: all 0.2s;
+
+  @supports (background-clip: text) or (-webkit-background-clip: text) {
+    background-image: linear-gradient(
+      to right,
+      $color-primary-light,
+      $color-primary-dark
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+  }
 
   @include respond(tab-port) {
     font-size: 3rem;
